futher contact methods improvements

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -24,7 +24,8 @@
     "ATTENDEE": "Attendee",
     "ORGANIZER": "Organizer",
     "SPONSOR": "Sponsor",
-    "VISIBLE": "Publicly visible?",
-    "CONTACT_METHODS": "Available contact methods"
+    "VISIBLE": "Visible?",
+    "CONTACT_METHODS": "Available contact methods",
+    "CHANGE_ROLE": "Change your role"
   }
 }
