--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,7 +7,10 @@
   "CONTACT": {
     "EMAIL": "E-mail",
     "TELEGRAM": "Telegram",
-    "DISCORD": "Discord"
+    "DISCORD": "Discord",
+    "EMAIL_PLACEHOLDER": "example@mail.com",
+    "TELEGRAM_PLACEHOLDER": "@example",
+    "DISCORD_PLACEHOLDER": "example#1234"
   },
   "ACCOUNT": {
     "UPLOAD_AVATAR": "Upload a new avatar",
