basics for attendees list and profiles

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -30,5 +30,8 @@
     "VISIBLE": "Visible?",
     "CONTACT_METHODS": "Available contact methods",
     "CHANGE_ROLE": "Change your role"
+  },
+  "ATTENDEES": {
+    "LOADING": "Loading..."
   }
 }
